--- a/styles.css
+++ b/styles.css
@@ -26,14 +26,12 @@ body{
     font-family: monospace;
 }
 
-/* Toggle Button Container */
 .toggle-container {
     position: absolute;
     top: 20px;
     right: 20px;
 }
 
-/* Toggle Switch */
 .toggle-switch {
     position: relative;
     display: inline-block;
@@ -41,14 +39,12 @@ body{
     height: 25px;
 }
 
-/* Hide the default checkbox */
 .toggle-switch input {
     opacity: 0;
     width: 0;
     height: 0;
 }
 
-/* Slider */
 .slider {
     position: absolute;
     cursor: pointer;
@@ -61,7 +57,6 @@ body{
     transition: 0.4s;
 }
 
-/* Circle (toggle button) */
 .slider:before {
     content: "";
     position: absolute;
@@ -74,7 +69,6 @@ body{
     transition: 0.4s;
 }
 
-/* Dark Mode (when checked) */
 .toggle-switch input:checked + .slider {
     background-color: #414040;
 }
@@ -102,14 +96,37 @@ body{
     border:none;
     border-radius: 5px;
     border-radius: 5px;
+    display: flex;
+    flex-direction: column;
 }
+
+.inner-result{
+    border-radius: 5px;
+    background-color: #ffffff;
+    border: none;
+    padding: 0px 10px;
+}
+#inputText{
+    border-bottom: 1px solid black;
+    height: 40%;
+    font-size: 24px;
+    border-radius: 10px 10px 0px 0px;
+}
+#output{
+    border-top: 1px solid black;
+    height: 60%;
+    font-size: 32px;
+    border-radius: 0px 0px 10px 10px;
+}
+
+
 .buttons{
     height: 80%;
     width: 100%;
     border-radius: 5px;
 }
 
-.screen{
+/* .screen{
     color: #333333;
     padding-left: 10px;
     font-size: 50px;
@@ -119,7 +136,7 @@ body{
     border-radius: 5px;
     background-color: #ffffff;
     
-}
+} */
 
 .result form{
     height: 100%;
@@ -131,7 +148,7 @@ body{
     border:none;
     display: grid;
     gap: 8px;
-    grid-template-columns: repeat(4, 1fr);  /* 4 columns */
+    grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(4, auto) auto;
 }
 .btn{
